--- a/src/global-styles/index.scss
+++ b/src/global-styles/index.scss
@@ -10,4 +10,5 @@ body {
     font-family: monospace;
     display: block;
     margin: 0;
+    overflow: hidden;
 }
